<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/text_title"
            android:text="@string/main_title"
            android:layout_width="wrap_content"
            android:textSize="40dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            />

        <Button
            android:id="@+id/button_launch_spotify"
            android:text="@string/launch_spotify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="launchSpotify"
            android:layout_below="@id/text_title"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"



            />

        <Button
            android:id="@+id/button_launch_score"
            android:text="@string/launch_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="launchScore"
            android:layout_below="@id/button_launch_spotify"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />

        <Button
            android:id="@+id/button_launch_library"
            android:text="@string/launch_library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="launchLibrary"
            android:layout_below="@id/button_launch_score"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />

        <Button
            android:id="@+id/button_launch_build_bigger"
            android:text="@string/launch_bigger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="launchBuildBigger"
            android:layout_below="@id/button_launch_library"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />

        <Button
            android:id="@+id/button_launch_xyz"
            android:text="@string/launch_xyz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="launchXyz"
            android:layout_below="@id/button_launch_build_bigger"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />

        <Button
            android:id="@+id/button_launch_capstone"
            android:text="@string/launch_capstone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="launchCapstone"
            android:layout_below="@id/button_launch_xyz"
            android:layout_weight="15"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />


    </LinearLayout>

</RelativeLayout>
